# nks-home-esp32-rust

./: .gitignore  AGENTS.md  Cargo.toml  README.md  partitions.csv  sdkconfig.defaults
.codex/: config.toml  instructions.md
documentation/: index.html
scripts/: build.sh  codex-check.sh  codex-run.sh  codex-setup.sh  flash_monitor.sh  monitor.sh
src/: error.rs  main.rs
src/app/: mod.rs
src/board/: mod.rs
src/config/: types.rs
src/devices/: mod.rs  registry.rs  switch.rs  traits.rs
src/gpio/: mod.rs
src/http/: mod.rs
src/http/assets/: index.html  provisioning.css  provisioning.html  provisioning.js
src/modules/: events.rs  manager.rs  mod.rs  relay_gpio.rs  traits.rs
src/mqtt/: contract.rs  mod.rs
src/runtime/: indicator.rs  mod.rs
src/schemas/: builtins.rs  mod.rs  registry.rs  types.rs  validate.rs
src/storage/: mod.rs  nvs.rs
src/wifi/: mod.rs
